# ifad

./: .gitignore  Cargo.toml  README.md
ifad-api/: Cargo.toml
ifad-api/src/: main.rs
ifad-api/src/app/: mod.rs
ifad-api/src/app/v1/: genes.rs  mod.rs
ifad-cli/: Cargo.toml
ifad-cli/src/: main.rs
ifad-core/: Cargo.toml
ifad-core/benches/: ingest.rs  truncated_10_000_tair.gaf  truncated_1_000_tair.gaf
ifad-core/src/: export.rs  index.rs  ingest.rs  lib.rs  models.rs  queries.rs
