[package]
name = "ifad-api"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ifad = { path = "../ifad-core" }
actix = "0.9.0"
actix-web = "2.0.0"
futures = "0.3.4"
arc-swap = "0.4.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
