[package]
name = "ifad-cli"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ifad"
path = "src/main.rs"

[dependencies]
ifad = { path = "../ifad-core" }
clap = "2.33.0"
