[package]
name = "ifad"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1.3"
regex = "1.3.4"
