[package]
name = "ifad"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1.3"
lazy_static = "1.4.0"
itertools = "0.9.0"
futures = { version="0.3.4", optional=true }
bytes = { version="0.5.4", optional=true }

[features]
default = ["async"]
async = ["futures", "bytes"]

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "ingest"
harness = false
